--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,27 +1,21 @@
-name: Deployment pipeline
+name: Go
 
-on:
-  push:
-    branches:
-      - main
-    tags:
-      - '*'
+on: [push]
 
 jobs:
   build:
+
     runs-on: self-hosted
+    strategy:
+      matrix:
+        go-version: [ '1.19', '1.20', '1.21.x' ]
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - name: Setup Go ${{ matrix.go-version }}
+        uses: actions/setup-go@v5
         with:
-          node-version: '20.8.1'
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Build Node Project
-        run: npm run build
+          go-version: ${{ matrix.go-version }}
+      # You can test your matrix by printing the current Go version
+      - name: Display Go version
+        run: go version
