--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,3 +19,5 @@ jobs:
       # You can test your matrix by printing the current Go version
       - name: Display Go version
         run: go version
+        - name: Test
+          run: go test -v ./...
